# engagehub-backend-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  Procfile  README.md  bot.py  docker-compose.yml  requirements.txt  start.sh
backend/: settings.py  urls.py
cogs/: __init__.py  admin.py  event_logger.py  points.py  resume_review.py  shop.py
config/: frontend-env-example.txt
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/management/commands/: evaluate_cache.py  process_daily_metrics.py
core/middleware/: __init__.py  cache_monitor.py
core/migrations/: 0001_initial.py  0002_initial_data.py  0003_userincentiveunlock.py  0004_discordlinkcode.py  0005_add_resume_review_models.py  0006_add_resume_review_activity.py  0007_add_media_consent_fields.py  0008_add_scheduling_models.py  0009_add_discord_verification.py  0010_activity_category_incentive_category_and_more.py  0010_resourcesubmission.py  0011_allow_manual_timestamp.py  0012_auto_20250902_0056.py  0013_add_profile_fields.py  0014_add_track_system.py  0015_merge_0010_resourcesubmission_0014_add_track_system.py  0016_alter_userpreferences_options.py  0017_add_resource_submission_indexes.py  0018_add_event_linkedin_submissions.py  0019_partnermetrics_remove_eventsubmission_description_and_more.py  0020_redemptionnotification.py  0022_auto_20250924_0156.py  0023_add_new_submission_models.py  0024_remove_eventsubmission_description_and_more.py
core/tests/: __init__.py  test_cache.py
core/utils/: __init__.py  memory_profiler.py
core/views/: cache_stats.py
cpp_extensions/: CMakeLists.txt  DJANGO_INTEGRATION.md  FINAL_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  README_UPDATES.md  RESUME_SUMMARY.md  STATUS_REPORT.md  rebuild.sh  requirements.txt  run_benchmarks.sh  run_tests.sh  setup.py  verify.sh  verify_installation.py
cpp_extensions/event_processor/: CMakeLists.txt
cpp_extensions/event_processor/include/: count_min_sketch.hpp  event_processor.hpp  hyperloglog.hpp  ring_buffer.hpp  ring_buffer.tpp  thread_pool.hpp
cpp_extensions/event_processor/src/: bindings.cpp  count_min_sketch.cpp  event_processor.cpp  hyperloglog.cpp  ring_buffer.cpp  thread_pool.cpp
cpp_extensions/event_processor/tests/: benchmark.cpp  test_cms.cpp  test_ring_buffer.cpp
cpp_extensions/leaderboard/: CMakeLists.txt
cpp_extensions/leaderboard/include/: leaderboard.hpp  skip_list.hpp  time_decay.hpp
cpp_extensions/leaderboard/src/: bindings.cpp  leaderboard.cpp  skip_list.cpp  time_decay.cpp
cpp_extensions/leaderboard/tests/: benchmark.cpp  test_skip_list.cpp
cpp_extensions/python_integration/: benchmark_comparison.py  example_usage.py  test_event_processor.py  test_leaderboard.py
docs/: DEPLOYMENT_SECURITY_ENHANCEMENTS.md  README.md  Student Portal Design.md
scripts/: availability_matcher.py  calendar_integration.py  create_sample_data.py  deploy_scheduling_system.py  professional_availability_form_setup.js  quick_deploy_testing.sh  setup-integration.sh  update_rewards.py  update_rewards_comprehensive.py
tests/: README.md
tests/discord/: live_discord_test.py  test_discord_commands.py
tests/integration/: test_cache_integration.py  test_discord_commands.py  test_environment.py  test_resume_review.py
